--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -1,5 +1,5 @@
 <footer id="footer">
-  <section>
+  <!-- <section>
     <form method="POST" action="https://formspree.io/{{site.email}}">
       <div class="field">
         <label for="name">Name</label>
@@ -40,7 +40,7 @@
         <li><a href="https://github.com/{{site.github}}" class="icon fa-github" rel="nofollow"><span class="label">GitHub</span></a></li>
       </ul>
     </section>
-  </section>
+  </section> -->
 </footer>
 <!-- Copyright -->
 <div id="copyright">
