Use jekyll comment instead

--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -1,5 +1,6 @@
 <footer id="footer">
-  <!-- <section>
+  {% comment %}
+  <section>
     <form method="POST" action="https://formspree.io/{{site.email}}">
       <div class="field">
         <label for="name">Name</label>
@@ -40,7 +41,8 @@
         <li><a href="https://github.com/{{site.github}}" class="icon fa-github" rel="nofollow"><span class="label">GitHub</span></a></li>
       </ul>
     </section>
-  </section> -->
+  </section>
+  {% endcomment %}
 </footer>
 <!-- Copyright -->
 <div id="copyright">
