Remove more heights

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3108,7 +3108,7 @@
 		cursor: default;
 		text-align: center;
 		z-index: 1;
-		min-height: 100vh;
+		/* min-height: 100vh; */
 	}
 
 		#intro input, #intro select, #intro textarea {
